Fix minor issue with row spacing in project organizer and files page.

--- a/website/static/css/fangorn.css
+++ b/website/static/css/fangorn.css
@@ -45,3 +45,8 @@ text-align: center;
 .tb-th {
 	line-height: normal;
 }
+
+.tb-td {
+    height: inherit;
+    padding-top: 6px;
+}
